added global network config...
Signed-off-by: Alex A. Naanou <alex.nanou@gmail.com>

--- a/config.global.example
+++ b/config.global.example
@@ -13,5 +13,15 @@ DFL_WAN_BRIDGE=2
 DFL_LAN_BRIDGE=0
 DFL_ADMIN_BRIDGE=1
 
+# this can be used for passing in ssh keys, etc...
 DFL_PCT_EXTRA=
+
+NS_HOSTNAME=ns
+NS_ADMIN_IP=10.0.0.1/24
+NS_LAN_IP=10.1.1.1/24
+
+GATE_HOSTNAME=gate
+GATE_ADMIN_IP=10.0.0.2/24
+GATE_LAN_IP=10.1.1.2/24
+
 
