--- a/ns/templates/etc/dnsmasq.conf
+++ b/ns/templates/etc/dnsmasq.conf
@@ -41,16 +41,16 @@ dhcp-range=interface:admin,10.0.0.20,10.0.0.200,12h
 dhcp-range=interface:lan,10.1.1.20,10.1.1.200,12h
 
 # ns
-address=/ns/10.0.0.1
-address=/ns/10.1.1.1
+address=/${CTHOSTNAME}/${ADMIN_IPn}
+address=/${CTHOSTNAME}/${LAN_IPn}
 
 # gate
-address=/gate/10.0.0.2
-address=/gate/10.1.1.2
-dhcp-option=admin,option:router,10.0.0.2
-dhcp-option=lan,option:router,10.1.1.2
-dhcp-host=admin,gate,10.0.0.2,infinite
-dhcp-host=lan,gate,10.1.1.2,infinite
+address=/${GATE_HOSTNAME}/${GATE_ADMIN_IP}
+address=/${GATE_HOSTNAME}/${LAN_GATE}
+dhcp-option=admin,option:router,${GATE_ADMIN_IP}
+dhcp-option=lan,option:router,${LAN_GATE}
+dhcp-host=admin,gate,${GATE_ADMIN_IP},infinite
+dhcp-host=lan,gate,${LAN_GATE},infinite
 
 # pve
 address=/pve/10.0.0.254
