--- a/ns/templates/etc/dnsmasq.conf
+++ b/ns/templates/etc/dnsmasq.conf
@@ -1,5 +1,7 @@
 #----------------------------------------------------------------------
 #
+# XXX get domain ips from config...
+#
 #----------------------------------------------------------------------
 # DNS
 
@@ -45,11 +47,11 @@ address=/${CTHOSTNAME}/${ADMIN_IPn}
 address=/${CTHOSTNAME}/${LAN_IPn}
 
 # gate
-address=/${GATE_HOSTNAME}/${GATE_ADMIN_IP}
+address=/${GATE_HOSTNAME}/${GATE_ADMIN_IPn}
 address=/${GATE_HOSTNAME}/${LAN_GATE}
-dhcp-option=admin,option:router,${GATE_ADMIN_IP}
+dhcp-option=admin,option:router,${GATE_ADMIN_IPn}
 dhcp-option=lan,option:router,${LAN_GATE}
-dhcp-host=admin,gate,${GATE_ADMIN_IP},infinite
+dhcp-host=admin,gate,${GATE_ADMIN_IPn},infinite
 dhcp-host=lan,gate,${LAN_GATE},infinite
 
 # pve
