--- a/wireguard/assets/root/Makefile
+++ b/wireguard/assets/root/Makefile
@@ -30,7 +30,7 @@ $(SERVER_CONF): $(SERVER_TPL) $(SERVER_KEY)
 		| sed \
 			-e 's/\$${ENDPOINT_PORT}/$(SERVER_PORT)/g' \
 			-e 's/\$${CLIENT_IPS}/$(subst /,\/,$(CLIENT_IPS))/g' \
-			-e 's/\$${SERVER_PRIVATE_KEY}/'$$(cat "$(subst /,\/,$(SERVER_KEY))")'/g' \
+			-e 's/\$${SERVER_PRIVATE_KEY}/'$$(cat "$(SERVER_KEY)" | sed -e 's/\//\\\//')'/g' \
 		> "$@"
 
 $(CLIENT_DIR)/%.conf: $(CLIENT_TPL) $(SERVER_CLIENT_TPL) \
@@ -44,16 +44,16 @@ $(CLIENT_DIR)/%.conf: $(CLIENT_TPL) $(SERVER_CLIENT_TPL) \
 			-e 's/\$${ENDPOINT_PORT}/$(ENDPOINT_PORT)/g' \
 			-e 's/\$${ALLOWED_IPS}/$(subst /,\/,$(ALLOWED_IPS))/g' \
 			-e 's/\$${CLIENT_IP}/$(subst /,\/,$(CLIENT_IP))/g' \
-			-e 's/\$${CLIENT_PRIVATE_KEY}/'$$(cat "$(subst /,\/,$(CLIENT_DIR))/$%_id")'/g' \
-			-e 's/\$${SERVER_PUBLIC_KEY}/'$$(cat "$(subst /,\/,$(SERVER_PUBLIC_KEY))")'/g' \
+			-e 's/\$${CLIENT_PRIVATE_KEY}/'$$(cat "$(CLIENT_DIR)/$%_id" | sed -e 's/\//\\\//')'/g' \
+			-e 's/\$${SERVER_PUBLIC_KEY}/'$$(cat "$(SERVER_PUBLIC_KEY)" | sed -e 's/\//\\\//')'/g' \
 		> "$@"
 	cat "$(SERVER_CLIENT_TPL)" \
 		| sed \
 			-e 's/\$${CLIENT_IP}/$(subst /,\/,$(CLIENT_IP))/g' \
 			-e 's/\$${ENDPOINT}/$(ENDPOINT)/g' \
 			-e 's/\$${ENDPOINT_PORT}/$(ENDPOINT_PORT)/g' \
-			-e 's/\$${CLIENT_PUBLIC_KEY}/'$$(cat "$(subst /,\/,$(CLIENT_DIR))/$%_id.pub")'/g' \
-			-e 's/\$${SERVER_PUBLIC_KEY}/'$$(cat "$(subst /,\/,$(SERVER_PUBLIC_KEY))")'/g' \
+			-e 's/\$${CLIENT_PUBLIC_KEY}/'$$(cat "$(CLIENT_DIR)/$%_id.pub" | sed -e 's/\//\\\//')'/g' \
+			-e 's/\$${SERVER_PUBLIC_KEY}/'$$(cat "$(SERVER_PUBLIC_KEY)" | sed -e 's/\//\\\//')'/g' \
 		>> "$(SERVER_CONF)"
 
 
