--- a/wireguard/templates/root/Makefile
+++ b/wireguard/templates/root/Makefile
@@ -11,7 +11,7 @@ SERVER_PUBLIC_KEY := $(SERVER_DIR)/server_id.pub
 CLIENT_TPL := templates/client.conf
 CLIENT_DIR := $(SERVER_DIR)/clients/
 
-CLIENT_IPS ?= 10.42.0.0/16
+CLIENT_IPS ?= ${CLIENT_IPS}
 ENDPOINT_PORT ?= ${ENDPOINT_PORT}
 ENDPOINT ?= ${ENDPOINT}
 
