wireguard mostly done...
Signed-off-by: Alex A. Naanou <alex.nanou@gmail.com>

--- a/wireguard/templates/root/Makefile
+++ b/wireguard/templates/root/Makefile
@@ -11,12 +11,12 @@ SERVER_PUBLIC_KEY := $(SERVER_DIR)/server_id.pub
 CLIENT_TPL := templates/client.conf
 CLIENT_DIR := $(SERVER_DIR)/clients/
 
-CLIENT_IPS ?= ${CLIENT_IPS}
-ENDPOINT_PORT ?= ${ENDPOINT_PORT}
-ENDPOINT ?= ${ENDPOINT}
 
+ENDPOINT ?= ${ENDPOINT}
+ENDPOINT_PORT ?= ${ENDPOINT_PORT}
 DNS ?= ${DNS}
-ALLOWED_IPS ?= 0.0.0.0/0
+CLIENT_IPS ?= ${CLIENT_IPS}
+ALLOWED_IPS ?= ${ALLOWED_IPS}
 
 
 
