--- a/wireguard/templates/root/Makefile
+++ b/wireguard/templates/root/Makefile
@@ -62,10 +62,9 @@ $(SERVER_CONF): $(SERVER_TPL) $(SERVER_KEY)
 			-e 's/\$${\CLIENT_PUBLIC_KEY}/'$$(sed -e 's/\//\\\//g' "$(CLIENT_DIR)/$*_id.pub")'/g' \
 			-e 's/\$${\SERVER_PUBLIC_KEY}/'$$(sed -e 's/\//\\\//g' "$(SERVER_PUBLIC_KEY)")'/g' \
 		>> "$(SERVER_CONF)"
-	@if [ -z "$$QRCODE" ] ; then \
-		echo "# Profile: $*:" \
-		qrencode -t UTF8 -r "$(CLIENT_DIR)/$*.conf" \
-	fi
+	@ [ -z "$$QRCODE" ] \
+		|| ( echo "# Profile: $*:" \
+			&& qrencode -t UTF8 -r "$(CLIENT_DIR)/$*.conf" )
 
 
 server: $(SERVER_CONF)
