--- a/wireguard/templates/root/Makefile
+++ b/wireguard/templates/root/Makefile
@@ -63,7 +63,7 @@ $(SERVER_CONF): $(SERVER_TPL) $(SERVER_KEY)
 			-e 's/\$${\SERVER_PUBLIC_KEY}/'$$(sed -e 's/\//\\\//g' "$(SERVER_PUBLIC_KEY)")'/g' \
 		>> "$(SERVER_CONF)"
 	@ [ -z "$$QRCODE" ] \
-		|| ( echo "# Profile: $*:" \
+		|| ( echo "# Profile: $*" \
 			&& qrencode -t UTF8 -r "$(CLIENT_DIR)/$*.conf" )
 
 
