--- a/config.global.example
+++ b/config.global.example
@@ -1,27 +1,73 @@
+#------------------------------------------------------------------------
 #
-# Setting an option here will disable its interactive dialog. prefixing 
-# an option (except for ROOTPASS) with "DFL_" will set the default value 
-# and show the dialog enabling the user to tweak/confirm the value.
+# Global config file
 #
+# Prefixing an option (except for ROOTPASS) with "DFL_" will set the 
+# default value and show the dialog enabling the user to tweak/confirm 
+# the value, while options without the prefix will be set without user 
+# interaction.
+# Options left unset will be interactively requested during the make
+# process.
+# To disable an option leaving it blank set it to 'SKIP'.
+#
+# CT-specific settings can be set in <ct>/config files for each 
+# specific CT.
+#
+# It is not recomended to set passwords here or in other config files.
+#
+#
+#------------------------------------------------------------------------
 
 DFL_EMAIL=user@example.com
+
 DFL_DOMAIN=example.com
+
 DFL_WAN_IP=192.168.1.101/24
 DFL_WAN_GATE=192.168.1.252
 
-DFL_WAN_BRIDGE=2
-DFL_LAN_BRIDGE=0
-DFL_ADMIN_BRIDGE=1
 
-# this can be used for passing in ssh keys, etc...
-DFL_PCT_EXTRA=
+# CT interface bridge configuration.
+#
+# These are set to the bridge number (the number in 'vmbr#') used for 
+# a specific network.
+#
+# Example:
+# 	WAN_BRIDGE=0
+#	LAN_BRIDGE=1
+#	ADMIN_BRIDGE=2
+#
+WAN_BRIDGE=
+LAN_BRIDGE=
+ADMIN_BRIDGE=
 
+
+# Extra options passed to each CT created.
+#
+# This can be used for passing in ssh keys, etc...
+#
+# see: 
+# 	man pct
+#
+DFL_PCT_EXTRA=SKIP
+
+
+
+#------------------------------------------------------------------------
+#
+# Options afetr this point are sane defaults and in the general case 
+# can be left as-is.
+#
+
+# Nameserver
 NS_HOSTNAME=ns
 NS_ADMIN_IP=10.0.0.1/24
 NS_LAN_IP=10.1.1.1/24
 
+# Gateway / Reverse proxy
 GATE_HOSTNAME=gate
 GATE_ADMIN_IP=10.0.0.2/24
 GATE_LAN_IP=10.1.1.2/24
 
 
+
+#------------------------------------------------------------------------
