--- a/nextcloud/templates/etc/traefik.d/nextcloud.yml
+++ b/nextcloud/templates/etc/traefik.d/nextcloud.yml
@@ -4,7 +4,7 @@ http:
       entryPoints:
         - https
       service: nextcloud
-      rule: "Host(`nc.${DOMAIN}`)"
+      rule: "Host(`${DOMAIN}`)"
       tls:
         certResolver: letsEncrypt
 
