--- a/wireguard/templates/root/Makefile
+++ b/wireguard/templates/root/Makefile
@@ -40,7 +40,7 @@ $(SERVER_CONF): $(SERVER_TPL) $(SERVER_KEY)
 			-e 's/\$${\SERVER_PRIVATE_KEY}/'$$(sed -e 's/\//\\\//g' "$(SERVER_KEY)")'/g' \
 		> "$@"
 
-$(CLIENT_DIR)/%.conf: $(CLIENT_TPL) $(SERVER_CLIENT_TPL) \
+%.client: $(CLIENT_TPL) $(SERVER_CLIENT_TPL) \
 		$(CLIENT_DIR)/%_id $(CLIENT_DIR)/%_id.pub \
 		$(SERVER_CONF) $(SERVER_PUBLIC_KEY)
 	@ mkdir -p $(CLIENT_DIR)
@@ -54,6 +54,7 @@ $(CLIENT_DIR)/%.conf: $(CLIENT_TPL) $(SERVER_CLIENT_TPL) \
 			-e 's/\$${\CLIENT_PRIVATE_KEY}/'$$(sed -e 's/\//\\\//g' "$(CLIENT_DIR)/$*_id")'/g' \
 			-e 's/\$${\SERVER_PUBLIC_KEY}/'$$(sed -e 's/\//\\\//g' "$(SERVER_PUBLIC_KEY)")'/g' \
 		> "$(CLIENT_DIR)/$*.conf"
+	ln -s "$(CLIENT_DIR)/$*.conf"
 	cat "$(SERVER_CLIENT_TPL)" \
 		| sed \
 			-e 's/\$${\CLIENT_IP}/$(shell ./getFreeClientIP)\/32/g' \
@@ -67,12 +68,10 @@ $(CLIENT_DIR)/%.conf: $(CLIENT_TPL) $(SERVER_CLIENT_TPL) \
 			&& qrencode -t UTF8 -r "$(CLIENT_DIR)/$*.conf" )
 
 
-%.client: $(CLIENT_DIR)/%.conf
-
 
 %.qr: %.client
 	@ ( echo "# Profile: $*" \
-		&& qrencode -t UTF8 -r "$(CLIENT_DIR)/$*.conf" )
+		&& qrencode -t UTF8 -r "$*.conf" )
 
 
 server: $(SERVER_CONF)
