--- a/config.global.example
+++ b/config.global.example
@@ -38,7 +38,7 @@ ADMIN_BRIDGE=
 DFL_WAN_IP=192.168.1.101/24
 DFL_WAN_GATE=192.168.1.252
 
-DFL_WAN_SSH_IP:192.168.1.102/24
+DFL_WAN_SSH_IP=192.168.1.102/24
 
 
 # Domain and email configuration
