added traefik rules for shadowsocks...
Signed-off-by: Alex A. Naanou <alex.nanou@gmail.com>

--- a/gate-traefik/templates/etc/traefik/traefik.yaml
+++ b/gate-traefik/templates/etc/traefik/traefik.yaml
@@ -22,6 +22,8 @@ entryPoints:
     address: ':51820/udp'
   wireguard2:
     address: ':51821/udp'
+  shadow:
+    address: ':5555'
   http:
     address: ':80'
     http:
