minor cleanup to ns...
Signed-off-by: Alex A. Naanou <alex.nanou@gmail.com>

--- a/ns/templates/etc/dnsmasq.conf
+++ b/ns/templates/etc/dnsmasq.conf
@@ -43,12 +43,16 @@ dhcp-range=interface:admin,10.0.0.20,10.0.0.200,12h
 dhcp-range=interface:lan,10.1.1.20,10.1.1.200,12h
 
 # ns
-address=/${CTHOSTNAME}/${ADMIN_IPn}
 address=/${CTHOSTNAME}/${LAN_IPn}
+address=/${CTHOSTNAME}.srv/${LAN_IPn}
+#address=/${CTHOSTNAME}/${ADMIN_IPn}
+address=/${CTHOSTNAME}.adm/${ADMIN_IPn}
 
 # gate
-address=/${GATE_HOSTNAME}/${GATE_ADMIN_IPn}
 address=/${GATE_HOSTNAME}/${LAN_GATE}
+address=/${GATE_HOSTNAME}.srv/${LAN_GATE}
+#address=/${GATE_HOSTNAME}/${GATE_ADMIN_IPn}
+address=/${GATE_HOSTNAME}.adm/${GATE_ADMIN_IPn}
 dhcp-option=admin,option:router,${GATE_ADMIN_IPn}
 dhcp-option=lan,option:router,${LAN_GATE}
 dhcp-host=admin,gate,${GATE_ADMIN_IPn},infinite
@@ -56,6 +60,7 @@ dhcp-host=lan,gate,${LAN_GATE},infinite
 
 # pve
 address=/pve/10.0.0.254
+address=/pve.adm/10.0.0.254
 
 
 
